rds.tf
resource "aws_db_instance" "db" {

  allocated_storage = 20
  engine            = "mysql"
  instance_class    = "db.t3.micro"

  username = var.db_username
  password = var.db_password

  db_subnet_group_name   = aws_db_subnet_group.db_subnet_group.name
  vpc_security_group_ids = [aws_security_group.db_sg.id]

  skip_final_snapshot = true
}

resource "aws_db_subnet_group" "db_subnet_group" {

  name = "db-subnet-group"

  subnet_ids = [
    aws_subnet.private_subnet_1.id,
    aws_subnet.private_subnet_2.id
  ]

}
